# seo-agent-mvp

./: .gitignore  QUICK_START.md  README.md  SETUP.md  VENV_ACTIVATION_GUIDE.md  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  requests.py  responses.py
